# XCodeLocalize

./: LICENSE  README.md  Settings.py  Strings.py  Translator.py  localize.py  localize.sh  pyproject.toml  readme.md  requirments.txt  setup.sh
src/xcodelocalize/: Settings.py  Strings.py  Translator.py  main.py
