[tool.poetry]
name = "xcodelocalize"
version = "0.1.1"
description = "Tool for automatic search and localization of .strings files"
authors = ["MarkParker5 <markparker.it@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MarkParker5/XCodeLocalize"

[tool.poetry.scripts]
xcodelocalize = "xcodelocalize.main:run"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
mtranslate = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
